# py_ai_translator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai.py  alembic.ini  cli.Dockerfile  config.py  crawler.py  decorators.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: ai.py  crawler.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_16_0333-d1adab7a2325_add_crawled_data_table.py  2025_03_16_1332-d6445c9e9d5f_add_crawled_data_table.py  2025_03_16_1433-0312e83ac1b0_add_translation_output_table.py  2025_03_30_0203-e80071a53c12_make_url_unique.py
app/api/: app.py  feed.py
app/config/: app_settings.py  db.py  logger.py  models.py
app/repositories/: app.py
app/schemas/: app.py  feed.py
app/services/: app.py  feed.py
app/utils/: ai.py  crawler.py
